# autoskola_testy

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  clippy.toml  package-lock.json  package.json  shell.nix  tailwind.config.js
assets/: tailwind.css
src/: main.rs  utils.rs
src/components/: answer.rs  mod.rs  test_question.rs
src/views/: home_view.rs  mod.rs  question_view.rs
