[package]
name = "autoskola_eztests"
version = "0.1.0"
authors = ["ahi6 <60984726+ahi6@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router"] }
dioxus-sdk = {version = "0.6.0", features = ["storage"]}
downloader4etesty2 = { path = "../downloader4etesty2" }
rand = "0.9.1"
# reqwest = "0.12.22"
reqwest = { version = "0.12.20", features = [
    "rustls-tls", # simplifies package management on NixOS
    # "json",
], default-features = false }
serde_json = "1.0.140"


[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
